--- a/comparcom_frontapp/package.json
+++ b/comparcom_frontapp/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "socket.io": "^4.1.3",
+    "sockjs-client": "^1.5.1",
+    "stomp-websocket": "^2.3.4-next",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -32,7 +35,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
