--- a/comparcom_frontapp/package.json
+++ b/comparcom_frontapp/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "socket.io": "^4.1.3",
+    "socket.io-client": "^1.7.4",
     "sockjs-client": "^1.5.1",
     "stomp-websocket": "^2.3.4-next",
     "vue": "^3.0.0"
